--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 <body>
-    <h1>HomePage</h1>
-    <p>This is some information</p>
+    <div class="container">    
+        <p class="h1">Home</p>
+        <p>This is information</p>
+    </div>
 </body>
 </html>
