--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -1,20 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-    crossorigin="anonymous">
-</head>
-<body>
-    <body>
+{{template "base" .}}
+
+{{define "content"}}
     <div class="container">    
-        <h1>About...</h1>
-        <p>This is information</p>
+        <p class="h1">About </p>
+        <p>This is information about page</p>
     </div>
-</body>
-</body>
-</html>
+{{end}}
