😎😋Removing Import Cycle error 🤗🤩

--- a/templates/about.page.tmpl
+++ b/templates/about.page.tmpl
@@ -4,5 +4,6 @@
     <div class="container">    
         <p class="h1">About </p>
         <p>This is information about page</p>
+        <h2> This Came from TemplateData: {{ index .StringMap "test"}} </h2>
     </div>
 {{end}}
